# Skills-Extractor-Recommender

./: README.md
UI/: index.html  package.json
UI/src/: App.tsx  index.css
backend/: .env.example  crew.py  crew_main.py  main.py  pyproject.toml  requirements.txt  test_complete_system.py  test_github_api.py  test_repository_analyzer.py
backend/config/: agents.yaml  tasks.yaml
backend/knowledge/: linkedin_data.json  user_preference.txt
backend/tools/: __init__.py  custom_tool.py  github_api_tool.py
rapport/: rapport_principal.tex
skill_extractor/: .gitignore  README.md  __init__.py  cluster_jobs.py  pipeline.py  process_offers_nlp.py  requirements.txt  run_clustering.py  run_clustering_improved.py  run_complete_pipeline.py  run_essentials.py  run_modelling.py  run_nlp.py  run_nlp_pipeline.py  run_pipeline.py  run_recommendations.py  run_scraping.py  setup_env.py  test_advanced_extraction.py  test_comparison.py  test_nlp_pipeline.py  test_pipeline.py
skill_extractor/dashboard/: README.md  app.py  requirements.txt  run.sh  simple_dashboard.py
skill_extractor/modelling/: __init__.py  clustering.py  embedding.py  embeddings.py
skill_extractor/nlp/: __init__.py  advanced_skills_extractor.py  nlp_pipeline.py  skills_extractor.py  skills_extractor_advanced.py  skills_extractor_v2.py  text_cleaner.py
skill_extractor/recommendtion/: __init__.py  clustering_recommender.py  cv_personalizer.py  cv_recommender_service.py  profile_matcher.py  recommender.py  skill_gap.py
skill_extractor/scrapping/: __init__.py  scraper.py  selenium_scraper.py
(+25 files in other folders)
